# writable_ndef_msg

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README.rst  license_config.yml  overlay-nfct-stack.conf  overlay-pn7160-hal.conf  overlay-pn7160-listen.conf  overlay-pn7160-spi.conf  overlay-pn7160-stack.conf  overlay-pn7160.conf  prj.conf  sample.yaml  sysbuild.cmake  west.yml
confs/: layer0-baseline.conf  layer1-nfct-hal.conf  layer1-pn7160-hal.conf  layer2-core-minimal.conf  layer3-protocols.conf  layer5-shell.conf  (+8 more)
modules/nfc_pn7160/tests/unit/pn7160_tml/: CMakeLists.txt  prj.conf  testcase.yaml
modules/nfc_pn7160/tests/unit/pn7160_tml/src/: main.c
src/nfc/: CMakeLists.txt  Kconfig  nfc_config.h
src/nfc/applets/: CMakeLists.txt  CONTEXT.md  Kconfig  nfc_applet.h  nfc_applet_emulate.c  nfc_applet_loop.c  nfc_applet_policy.c  nfc_applet_policy.h  nfc_applet_read.c  nfc_applet_scan.c  nfc_applet_service.c  nfc_applet_service.h  nfc_applet_shell_cmds.c  nfc_applet_verify.c  nfc_applet_verify_compare.c
src/nfc/framing/: CMakeLists.txt  CONTEXT.md  Kconfig  apdu_assembler.c  apdu_assembler.h  apdu_types.h
src/nfc/hal/: CMakeLists.txt  CONTEXT.md  Kconfig  nfc_apdu_asm.c  nfc_apdu_asm.h  nfc_apdu_pool.c  nfc_apdu_pool.h  nfc_transport.h  nfc_transport_nrfx.c  nfc_transport_pn7160.c  nfc_transport_shell_cmds.c
src/nfc/helpers/: felica_crc.c  felica_crc.h
src/nfc/nfc_stack/: CMakeLists.txt  CONTEXT.md  Kconfig  nfc_stack.c  nfc_stack.h  nfc_stack_shell_cmds.c
src/nfc/protocols/aliro/: CMakeLists.txt  CONTEXT.md  Kconfig  aliro.c  aliro.h  aliro_listener.c  aliro_listener.h  aliro_poller.c  aliro_poller.h  aliro_vectors.h
src/nfc/protocols/classic/: CMakeLists.txt  CONTEXT.md  Kconfig  classic.c  classic.h  classic_i.c  classic_i.h  classic_listener.c  classic_listener.h  classic_poller.c  classic_poller.h  crypto1.c  crypto1.h  iso14443_crc.c  iso14443_crc.h
src/nfc/protocols/desfire/: CMakeLists.txt  CONTEXT.md  Kconfig  desfire.c  desfire.h  desfire_listener.c  desfire_listener.h  desfire_poller.c  desfire_poller.h  desfire_poller_i.c  desfire_poller_i.h
src/nfc/protocols/emv/: CMakeLists.txt  CONTEXT.md  Kconfig  emv.c  emv.h  emv_listener.c  emv_listener.h  emv_poller.c  emv_poller.h
src/nfc/protocols/felica/: CMakeLists.txt  CONTEXT.md  Kconfig  felica.c  felica.h  felica_listener.c  felica_listener.h  felica_poller.c  felica_poller.h  felica_poller_i.c  felica_poller_i.h
src/nfc/protocols/iso15693_3/: CMakeLists.txt  CONTEXT.md  Kconfig  iso15693_3.c  iso15693_3.h  iso15693_3_listener.c  iso15693_3_listener.h  iso15693_3_poller.c  iso15693_3_poller.h  iso15693_3_poller_i.c  iso15693_3_poller_i.h
src/nfc/protocols/ndef/: CMakeLists.txt  CONTEXT.md  Kconfig  ndef.c  ndef.h  ndef_listener.c  ndef_listener.h  ndef_poller.c  ndef_poller.h
src/nfc/protocols/slix/: CMakeLists.txt  CONTEXT.md  Kconfig  slix.c  slix.h  slix_listener.c  slix_listener.h  slix_poller.c  slix_poller.h  slix_poller_i.c  slix_poller_i.h
src/nfc/protocols/ultralight/: CMakeLists.txt  CONTEXT.md  Kconfig  ultralight.c  ultralight.h  ultralight_3des.c  ultralight_3des.h  ultralight_des.c  ultralight_des.h  ultralight_listener.c  ultralight_listener.h  ultralight_listener_t2.c  ultralight_listener_t2.h  ultralight_poller.c  ultralight_poller.h  ultralight_poller_i.c  ultralight_poller_i.h
src/nfc/reader/: CMakeLists.txt  CONTEXT.md  Kconfig  nfc_reader_engine.c  nfc_reader_engine.h  nfc_reader_poller_registry.c  nfc_reader_poller_registry.h  nfc_reader_shell_cmds.c
src/nfc/router/: CMakeLists.txt  CONTEXT.md  Kconfig  aid_router.c  aid_router.h  service.h
src/nfc/run/: CMakeLists.txt  CONTEXT.md  Kconfig  nfc_stack_workq.c  nfc_stack_workq.h
src/nfc/store/: CMakeLists.txt  CONTEXT.md  Kconfig  nfc_persist_name.c  nfc_persist_name.h  nfc_store.c  nfc_store.h  nfc_store_golden.c  nfc_store_golden.h  nfc_store_ram.c  nfc_store_ram.h  nfc_store_shell_cmds.c
tests/unit/nfc_aliro/: CMakeLists.txt  Kconfig  prj_listener.conf  prj_poller.conf  testcase.yaml
tests/unit/nfc_aliro/src/: test_listener.c  test_model.c  test_poller.c
tests/unit/nfc_classic/: CMakeLists.txt  Kconfig  prj_listener.conf  prj_model.conf  prj_poller.conf  prj_poller_1k_7b.conf  prj_poller_4k.conf  prj_poller_4k_7b.conf  prj_poller_mini.conf  prj_poller_mini_7b.conf  testcase.yaml
tests/unit/nfc_classic/src/: test_listener.c  test_model.c  test_poller.c  test_poller_4k.c  test_poller_variants_small.c
tests/unit/nfc_emv/: CMakeLists.txt  Kconfig  prj_listener.conf  prj_poller.conf  testcase.yaml
tests/unit/nfc_emv/src/: test_listener.c  test_model.c  test_poller.c
tests/unit/nfc_iso15693_3/: CMakeLists.txt  Kconfig  prj_listener.conf  prj_poller.conf  testcase.yaml
tests/unit/nfc_iso15693_3/src/: test_listener.c  test_model.c  test_poller.c
tests/unit/nfc_ndef/: CMakeLists.txt  Kconfig  prj.conf  prj_listener.conf  prj_poller.conf  testcase.yaml
tests/unit/nfc_ndef/src/: listener_test_helpers.h  test_listener_dispatch.c  test_listener_read.c  test_listener_select.c  test_listener_update.c  test_model.c  test_poller.c
tests/unit/nfc_reader/: CMakeLists.txt  Kconfig  README.md  overlay-store-qemu.conf  overlay-store-ram.conf  prj.conf  prj_classic_4k.conf  testcase.yaml
tests/unit/nfc_reader/src/: nfc_reader_session_mock.c  nfc_reader_session_mock.h  test_applet_headless.c  test_classic_4k_reader.c  test_placeholder.c  test_poller_registry.c  test_store_aliro_roundtrip.c  test_store_classic_roundtrip.c  test_store_desfire_roundtrip.c  test_store_emv_roundtrip.c  test_store_felica_roundtrip.c  test_store_import.c  test_store_roundtrip.c  test_store_slix_roundtrip.c  test_store_ultralight_roundtrip.c  test_verify_diff.c  test_virtual_loopback.c
tests/unit/nfc_slix/: CMakeLists.txt  Kconfig  prj_listener.conf  prj_model.conf  prj_poller.conf  testcase.yaml
tests/unit/nfc_slix/src/: test_listener.c  test_model.c  test_poller.c
tests/unit/nfc_ultralight/: CMakeLists.txt  Kconfig  prj_model.conf  prj_poller.conf  testcase.yaml
tests/unit/nfc_ultralight/src/: test_model.c  test_poller.c
(+294 files in other folders)
