cmake_minimum_required(VERSION 3.20.0)
include(${CMAKE_CURRENT_SOURCE_DIR}/../../common/CMakeLists.txt)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(nfc_aliro_unit)
set(REPO_NFC ${CMAKE_CURRENT_SOURCE_DIR}/../../../src/nfc)
target_sources(app PRIVATE src/test_model.c ${REPO_NFC}/protocols/aliro/aliro.c ${NFC_TEST_COMMON_SOURCES})
if(CONFIG_NFC_ALIRO_TEST_TIER_POLLER)
  target_sources(app PRIVATE src/test_poller.c ${REPO_NFC}/protocols/aliro/aliro_poller.c)
endif()
if(CONFIG_NFC_ALIRO_TEST_TIER_LISTENER)
  target_sources(app PRIVATE src/test_listener.c ${REPO_NFC}/protocols/aliro/aliro_listener.c)
endif()
target_include_directories(app PRIVATE ${REPO_NFC} ${REPO_NFC}/protocols/aliro ${REPO_NFC}/reader
  ${CMAKE_CURRENT_SOURCE_DIR}/../../fixtures/aliro ${NFC_TEST_COMMON_INCLUDES})
